Use getDeclaredConstructor() so exception checking isn't bypassed
-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=173412751